# LvWallPadUI

./: CMakeCache.txt  CMakeKits.json  CMakeLists.txt  Makefile  MyFirmware  cmake_install.cmake  compile  compile_commands.json  gdb_dbg  r2_dbg  run
assets/: home-icon
lvgl/: Makefile  Makefile.tmpf42a2  cmake_install.cmake  lv_conf.h
src/: main.cpp
src/hal/: app_hal.cpp  app_hal.h
src/ui/: ui_main.cpp  ui_main.h
src/ui/pages/: main_page.cpp  main_page.h
src/ui/utils/: icons.h  pos.h
